--- a/EnjoyEat/EnjoyEat/Views/MemberLogin/ForgetPassword.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberLogin/ForgetPassword.cshtml
@@ -8,7 +8,7 @@
 <!-- d-flex align-items-center -->
 <div id="forget" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
     <main id="main">
-        <section class="breadcrumbs">
+        <section class="breadcrumbs" id="forgetPasswordlist">
             <div class="container" id="member">
                 <h1 id="Logo">
                     忘記密碼
@@ -21,7 +21,7 @@
                     <span>請輸入註冊帳號</span>
                 </h4>
 
-                <input type="text" class="left form-label col-md-11" v-model="account" placeholder="請輸入帳號">
+                <input type="text" class="col-md-11" v-model="account" placeholder="請輸入帳號">
 
             <div id="PasswordHelpBlock" class="form-text">
                 最小不能低於8碼,最大上限為12碼,不限英文與數字
@@ -38,13 +38,13 @@
                     <span>請輸入註冊信箱</span>
                 </h4>
 
-                <input type="email" class="left form-label col-md-11" v-model="email" placeholder="請輸入電子郵件">
+                <input type="email" class=" col-md-11" v-model="email" placeholder="請輸入電子郵件">
 
                 <div id="AccountHelpBlock" class="form-text nono" v-if="emailcheck">
                     信箱為無效之信箱，請確認輸入信箱為原註冊之信箱
                 </div>
 
-                <div class="d-grid gap-2 col-md-9 mx-auto">
+                <div class="d-grid gap-2 col-md-9 mx-auto" id="submit">
                     <button class="btn btn-primary" type="button" @@click="submitInfo">送出</button>
                 </div>
             </div>
