--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/BackendHome/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/BackendHome/Index.cshtml
@@ -5,7 +5,7 @@
 				<div class="d-flex align-items-center justify-content-between mb-3">
 					<h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>後臺管理</h3>
 				</div>
-				<h1>Enjoy Eat 後台首頁</h1>
+				<h1>Enjoy Eat 後臺首頁</h1>
 			</div>
 		</div>
 	</div>
