--- a/EnjoyEat/EnjoyEat/Views/Menu/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Menu/Index.cshtml
@@ -36,8 +36,8 @@
                             aria-label="Slide 9"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9"
                             aria-label="Slide 10"></button>
-                    </div>
-                <div class="carousel-inner">
+                </div>
+                @*<div class="carousel-inner">
                 <div v-for="(t, index) in temp.slice(1, 11)" :key="t.productId" :class="{'carousel-item': true, 'active': index == 0}">
                         <div class="row">
                             <div class="toptenimg col-md-8">
@@ -52,17 +52,159 @@
                             </div>
                         </div>
                     </div>
+                </div>*@
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <div class="toptenimg col-md-8">
+                                <img src="~/img/food/meat3.jpg" class=" d-block " alt="Image 1">
+                            </div>
+                            <div class="toptenitem col-md-4">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  1</span></h3><br>
+                                <h4>通心菲力</h4>
+                                <p>Price: $400 </p><br>
+                                <div class="carousel-caption">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="toptenimg col-md-8">
+                                <img src="~/img/food/risotto3.jpg" class="d-block " alt="Image 2">
+                            </div>
+                            <div class="toptenitem col-md-4">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  2</span></h3><br>
+                                <h4>咖哩龍蝦燉飯</h4>
+                                <p>Price: $450</p>
+                                <div class="carousel-caption">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="toptenimg col-md-8">
+                                <img src="~/img/food/pasta1.jpg" class="d-block " alt="Image 3">
+                            </div>
+                            <div class="toptenitem col-md-4">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  3</span></h3><br>
+                                <h3>辣炒蛤蠣義大利麵</h3>
+                                <p>Price: $350</p>
+                                <div class="carousel-caption">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="toptenimg col-md-8">
+                                <img src="~/img/food/meat4.jpg" class="d-block " alt="Image 4">
+                            </div>
+                            <div class="toptenitem col-md-4">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  4</span></h3><br>
+                                <h3>時蔬烤羊排</h3>
+                                <p>Price: $400</p>
+                                <div class="carousel-caption">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="toptenimg col-md-8">
+                                <img src="~/img/food/pizza3.jpg" class="d-block " alt="Image 5">
+                            </div>
+                            <div class="toptenitem col-md-4">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  5</span></h3><br>
+                                <h3>蘿勒起司披薩</h3>
+                                <p>Price: $250</p>
+                                <div class="carousel-caption">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="toptenimg col-md-8">
+                                <img src="~/img/food/dessert3.jpg" class="d-block " alt="Image 6">
+                            </div>
+                            <div class="toptenitem col-md-4">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  6</span></h3><br>
+                                <h3>可可慕斯蛋糕</h3>
+                                <p>Price: $150</p>
+                                <div class="carousel-caption">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="toptenimg col-md-8">
+                                <img src="~/img/food/beverage2.jpg" class="d-block " alt="Image 7">
+                            </div>
+                            <div class="toptenitem col-md-4">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  7</span></h3><br>
+                                <h3>抹茶撞奶</h3>
+                                <p>Price: $80</p>
+                                <div class="carousel-caption">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="toptenimg col-md-8">
+                                <img src="~/img/food/beverage8.jpg" class="d-block " alt="Image 8">
+                            </div>
+                            <div class="toptenitem col-md-4">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  8</span></h3><br>
+                                <h3>莓果奶昔</h3>
+                                <p>Price: $80</p>
+                                <div class="carousel-caption">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="toptenimg col-md-8">
+                                <img src="~/img/food/dessert1.jpg" class="d-block " alt="Image 9">
+                            </div>
+                            <div class="toptenitem col-md-4">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  9</span></h3><br>
+                                <h3>法式草莓奶油可麗餅</h3>
+                                <p>Price: $150</p>
+                                <div class="carousel-caption">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="toptenimg col-md-8">
+                                <img src="~/img/food/meat6.jpg" class="d-block " alt="Image 10">
+                            </div>
+                            <div class="toptenitem col-md-4">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  10</span></h3><br>
+                                <h3>鮭魚佐燉時蔬</h3>
+                                <p>Price: $450</p>
+                                <div class="carousel-caption">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
     </section>
     <div class="section-title">
