--- a/EnjoyEat/EnjoyEat/Views/Reservations/booking.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Reservations/booking.cshtml
@@ -154,7 +154,7 @@
                             icon: 'error',
                             color: '#333',
                             iconColor: '#D8CDB9',
-                            confirmButtonColor: '#721B29',
+                            confirmButtonColor: '#cda45e',
                             background: '#FFF',
                             html: '<div class="custom-swal-container"><div class="custom-swal-message">請填寫完整訊息，才能發送哦!</div></div>',
                             // text: '有地方還沒填哦!',
