--- a/EnjoyEat/EnjoyEat/Views/OrderHere/Order.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/OrderHere/Order.cshtml
@@ -41,20 +41,29 @@
             justify-content: center;
             align-items: center;
             flex-wrap: nowrap;
-            
         }
 
         #menu-flters li, #menu-flters-sub li {
-            margin: 0px; 
-            list-style:none;
+            margin: 0px;
+            list-style: none;
             line-height: 0.8;
+            cursor: pointer;
+            display: inline-block;
+            padding: 8px 12px 10px 12px;
+            font-size: 16px;
+            font-weight: 500;
+            color: #fff;
+            margin-bottom: 5px;
+            transition: all ease-in-out .3s;
+            border-radius: 50px;
+            font-family: "Playfair Display",serif;
         }
 
         #menu-flters, #menu-flters-sub {
             display: flex;
             justify-content: space-evenly;
             flex-wrap: wrap;
-            width: 50%; 
+            width: 50%;
         }
 
         .cartIcon {
@@ -73,9 +82,9 @@
             background-color: #0c0b09
         }
 
-        .btn-secondary a {
-            color: #fff;
-        }
+            .btn-secondary a {
+                color: #fff;
+            }
 
         .sub-filter-active {
             background-color: darkorange;
@@ -115,7 +124,8 @@
                     :key="subCategory.subCategoryId"
                     :value="subCategory.subCategoryId"
                     :class="{ 'sub-filter-active': selectedSubCategoryId === subCategory.subCategoryId }"
-                    v-on:click="selectedSubCategoryId = subCategory.subCategoryId">
+                    v-on:click="selectedSubCategoryId = subCategory.subCategoryId"
+                    role="button">
                     {{ subCategory.subCategoriesName }}
                 </li>
             </ul>
@@ -152,7 +162,7 @@
                 </div>
             </div>
         </div>
-    </section> 
+    </section>
     <!-- 數量編輯 -->
     <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -167,7 +177,7 @@
                     <div class="product__item__text">
                         <h4>{{ selectedProduct.productName }}</h4>
                         <div class="product__item__price text-light ">${{ selectedProduct.unitPrice }}</div>
-                        <br/>
+                        <br />
                         <div class="row justify-content-evenly">
                             <button type="button" class="col-2 btn btn-light btn-sm" v-on:click="removeFromCart(selectedProduct)"><i class="fa fa-minus"></i></button>
                             <span class="col-2">{{ getQuantity(selectedProduct) }}</span>
@@ -184,7 +194,7 @@
     @* Cart Modal *@
     <!-- 購物車跳窗 -->
     <div class="modal fade" id="cartModal" tabindex="-1" role="dialog" aria-labelledby="cartModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable" role="document">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
             <div class="modal-content">
                 <div class="modal-header border border-dark">
                     <h5 class="modal-title text-body" id="cartModalLabel">您的購物車內容</h5>
@@ -224,43 +234,24 @@
             </div>
         </div>
     </div>
-    
+
 </div>
 @section Scripts
     {
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.14/dist/vue.js"></script>
     <script src="~/orderforhere/startorderjs/jquery.barfiller.js"></script>
     <script src="~/orderforhere/startorderjs/jquery.magnific-popup.min.js"></script>
     <script src="~/orderforhere/startorderjs/jquery.nicescroll.min.js"></script>
     <script src="~/orderforhere/startorderjs/jquery.slicknav.js"></script>
     <script src="~/orderforhere/startorderjs/jquery.nice-select.min.js"></script>
     <script src="~/orderforhere/startorderjs/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript">
-        var connection = new signalR.HubConnectionBuilder()
-            .withUrl("/paymentHub")
-            .build();
-
-        connection.on("PaymentStatusChanged", function (orderId, isPaid) {
-            if (isPaid) {
-                // 如果收到的付款狀態為已付款，則跳出提醒視窗
-                Swal.fire(
-                    '交易狀態提示',
-                    '訂單編號： ' + orderId + '付款成功',
-                    'success'
-                )
-            }
-        });
-
-        connection.start().catch(function (err) {
-            return console.error(err.toString());
-        });
-    </script>
     <script>
         window.addEventListener('scroll', () => {
             const element = document.querySelector('#orderItem');
             const scrollPosition = window.scrollY;
             if (window.innerWidth > 990) {
                 element.style.top = scrollPosition < 530
-                ? '116px' : '0px';
+                    ? '116px' : '0px';
             }
             if (window.innerWidth <= 990 && window.innerWidth > 274) {
                 element.style.top = scrollPosition < 450 ? '60px' : '0px';
@@ -273,7 +264,7 @@
         var app = new Vue({
             el: '#app',
             data: {
-                memberId:'',
+                memberId: '',
                 products: [],
                 cart: [],
                 cartId: '',
@@ -294,10 +285,13 @@
 
                 //利用filter方法將符合目前所選擇子分類的對應產品取出
                 filteredProducts() {
+                    let _this = this;
+                    let filterArr = _this.products;
                     if (this.selectedSubCategoryId) {
-                        return this.products.filter(product => product.subCategoryId === this.selectedSubCategoryId);
+                        //return this.products.filter(product => product.subCategoryId === this.selectedSubCategoryId);
+                        filterArr = _this.products.filter(product => product.subCategoryId === this.selectedSubCategoryId);
                     }
-                    return [];
+                    return filterArr;
                 },
 
                 //計算購物車內容的總餐點數量
@@ -319,10 +313,27 @@
                     if (cartItem) {
                         this.$set(cartItem, 'quantity', cartItem.quantity + 1);
                     } else {
-                        this.cart.push({ ...product, quantity: 1 });
+                        this.cart.push({
+                            ...product,
+                            quantity: 1,
+                            memberId: this.memberId,
+                            unitPrice: product.unitPrice,
+                            cartId: this.cartId,
+                            productName: product.productName
+                        });
                     }
                     this.total += product.unitPrice;
-                    axios.post('/api/Menu/AddToCart', { memberId: this.memberId, productId: product.productId, quantity: 1 })
+                    this.updateCartTotal();
+                    axios.post('/api/Order/AddToCart', {
+                        MemberId: this.memberId,
+                        ProductId: product.productId,
+                        ProductName: product.productName,
+                        Quantity: 1,
+                        UnitPrice: product.unitPrice
+                    })
+                        .then(response => {
+                            console.log(response.data);
+                        })
                         .catch(err => console.error(err));
                 },
                 //從購物車移除
@@ -334,9 +345,20 @@
                             this.cart = this.cart.filter(item => item.productId !== product.productId);
                         }
                         this.total -= product.unitPrice;
-                        axios.post('/api/Menu/RemoveFromCart', { memberId: this.memberId, productId: product.productId, quantity: 1 })
+                        this.updateCartTotal();
+                        axios.post('/api/Order/RemoveFromCart', {
+                            MemberId: this.memberId,
+                            ProductId: product.productId,
+                            ProductName: product.productName,
+                            Quantity: 1,
+                            UnitPrice: product.unitPrice
+                        })
                             .catch(err => console.error(err));
                     }
+                },
+                //更新購物車金額
+                updateCartTotal() {
+                    this.total = this.cart.reduce((sum, item) => sum + item.quantity * item.unitPrice, 0);
                 },
                 //取得餐點數量
                 getQuantity(product) {
@@ -383,14 +405,13 @@
                                 .catch(error => {
                                     console.error('清空後台購物車失敗:', error);
                                 });
-                            window.location.href = '/OrderTogo/Checkout/' + response.data;
+                            window.location.href = '/OrderHere/Checkout/' + response.data;
                         })
                         .catch(error => {
                             alert('送出失敗');
                             console.log(error);
                         });
                 }
-
             },
             watch: {
                 //監聽大分類的變化，如果大分類被賦予新值，則預設顯示對應的第一個子分類
@@ -402,10 +423,10 @@
                         }
                     }
                 },
-                //監聽購物車內容的變化，並將變化後的內容傳送至後端
+                //監聽購物車內容的變化，並將變化後的內容傳送至前端
                 cart: {
                     handler: function (after, before) {
-                        axios.post('/api/Menu/UpdateCart', { cartViewModel: after })
+                        axios.post('/api/Order/UpdateCart', { cartViewModel: after })
                             .then(response => {
                                 console.log(response);
                             })
@@ -418,23 +439,28 @@
 
             },
             created: function () {
-                axios.get('/api/Menu/CategoriesWithSubs')
+                axios.get('/api/Order/GetMemberId')
+                    .then(response => {
+                        this.memberId = response.data;
+                    })
+                    .catch(err => console.error(err));
+                axios.get('/api/Order/CategoriesWithSubs')
                     .then(response => this.categories = response.data)
                     .catch(err => {
                         console.error(err);
                         alert('無法獲取菜單類別，請稍後再試。');
                     });
-
-                axios.get('/api/Menu/Products')
+                axios.get('/api/Order/Products')
                     .then(response => this.products = response.data)
                     .catch(err => console.error(err));
-                
-                axios.post('/api/Menu/CreateCart')
+                axios.get('/api/Order/GetCartOrCreate')
                     .then(response => {
-                        this.cartId = response.data;  // 將返回的購物車 ID 保存到數據中
+                        this.cart = response.data.items;
+                        this.cartId = response.data.cartId;
+                        this.updateCartTotal();
                     })
                     .catch(error => {
-                        console.error('購物車建立失敗:', error);
+                        console.error('獲取或創建購物車失敗:', error);
                     });
             },
         });
