--- a/EnjoyEat/EnjoyEat/Views/OrderHere/Order.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/OrderHere/Order.cshtml
@@ -99,7 +99,7 @@
 <div id="app">
     @* Order Area *@
     <div class="section-title">
-        <h2>外帶點餐</h2>
+        <h2>內用點餐</h2>
         <p>歡迎查看美味的菜單</p>
     </div>
     <!-- 菜單類別選擇列 -->
