--- a/EnjoyEat/EnjoyEat/Views/OrderHere/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/OrderHere/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
                 <li><a class="nav-link scrollto" asp-area="" asp-controller="MemberLogin" asp-action="Index">會員登入</a></li>
-                <li><a class="nav-link scrollto" asp-area="" asp-controller="OrderTogo" asp-action="Order">直接點餐</a></li>
+                <li><a class="nav-link scrollto" asp-area="" asp-controller="OrderHere" asp-action="Order">直接點餐</a></li>
             </ul>
         </div>
     </div>
