--- a/EnjoyEat/EnjoyEat/Views/MemberLogin/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberLogin/Index.cshtml
@@ -23,7 +23,7 @@
                     帳號或密碼長度為8至12個字，請重新確認
                 </div>
                 <br />
-                <form class="d-grid gap-2 col-6 mx-auto">
+                <form class="d-grid gap-2 col-lg-6 col-10 mx-auto">
                     <h4>
                         <i class="fa-solid fa-lock"></i>
                         <span>帳號</span>
