--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/Order/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/Order/Index.cshtml
@@ -333,17 +333,26 @@
                     );
                 },
                 //刪除訂單明細
-                deleteDetail:function(order){
+                deleteDetail: function (order) {
                     let _this = this;
-                    var ret = confirm("確定要刪除嗎?")
-                    if (ret == true) {
                         axios.delete(`/api/OrderBackend/DeleteOrderDetail/${order.orderDetailId}`)
                             .then(response => {
-                                alert("已成功刪除")
-                                _this.getOrder();
-                            })
-                    }
-                },
+                                Swal.fire({
+                                    allowOutsideClick: false,
+                                    icon: 'success',
+                                    color: '#333',
+                                    iconColor: '#D8CDB9',
+                                    background: '#FFF',
+                                    title: '訂單刪除成功',
+                                    showConfirmButton: false,
+                                    timer: 2000,
+                                    position: 'center'
+                                }).then(result => {
+                                    _this.getOrder();
+                                });
+                            });
+                }
+
             },
             mounted: function () {
                 let _this = this;
