補回signalR&修正外帶訂單無法提交

--- a/EnjoyEat/EnjoyEat/Views/OrderHere/Checkout.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/OrderHere/Checkout.cshtml
@@ -246,7 +246,7 @@
                     }
                 },
                 trackPaymentStatus: function (orderId) {
-                    let connection = new signalR.HubConnectionBuilder()
+                    let c = new signalR.HubConnectionBuilder()
                         .withUrl("/paymentHub")
                         .configureLogging(signalR.LogLevel.Information)
                         .build();
