--- a/EnjoyEat/EnjoyEat/Views/OrderTogo/Checkout.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/OrderTogo/Checkout.cshtml
@@ -181,7 +181,7 @@
                         this.OrderId = response.data.orderId;
                         console.log(this.OrderId);
 
-                        //確保先抓到memberId並存起來後，才開始抓訂單內容
+                        // 確保先抓到 memberId 並存起來後，才開始抓訂單內容
                         return axios.get("/Checkout/GetOrderDetails", {
                             params: {
                                 OrderId: this.OrderId
@@ -191,16 +191,15 @@
                     .then(response => {
                         this.OrderItem = response.data;
                         this.totalDiscount = this.OrderItem.totalPrice - this.OrderItem.finalPrice;
-                        this.levelDiscountSum = (this.OrderItem.totalPrice - this.OrderItem.campaignDiscount)
-                            * (1 - this.OrderItem.levelDiscount);
+                        this.levelDiscountSum = (this.OrderItem.totalPrice - this.OrderItem.campaignDiscount) * (1 - this.OrderItem.levelDiscount);
                     })
                     .catch(error => {
                         console.log(error);
-                    })
+                    });
             },
             mounted: function () {
                 this.signalr = new signalR.HubConnectionBuilder()
-                    .withUrl("/paymentHub?orderId=" + this.OrderId)
+                    .withUrl("/paymentHub", { query: { orderId: this.OrderId.toString() } })
                     .configureLogging(signalR.LogLevel.Information)
                     .build();
                 this.signalr.on("PaymentStatusChanged", (isSuccess) => {
@@ -215,7 +214,6 @@
                         });
                     }
                 });
-
                 this.signalr.start().catch(err => console.error(err.toString()));
             },
             methods: {
@@ -261,12 +259,12 @@
                         }).then(() => {
                             //追蹤訂單結帳狀態
                             console.log(this.OrderId);
-                            this.trackPaymentStatus(this.OrderId);
+                            this.trackPaymentStatus(this.OrderId.toString());
                         });
                     }
                 },
                 trackPaymentStatus: function (orderId) {
-                    this.signalr.invoke("TrackPaymentStatus", orderId).catch(err => console.error(err.toString()));
+                    this.signalr.invoke("TrackPaymentStatus", orderId.toString()).catch(err => console.error(err.toString()));
                 }
             }
         });
