--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/Order/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/Order/Index.cshtml
@@ -173,27 +173,8 @@
     <script src="/axios/axios.min.js"></script>
     <script src="~/microsoft/signalr/dist/browser/signalr.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue2-datepicker@3.11.0/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.18/dist/sweetalert2.min.js"></script>
     <script type="text/javascript">
-        var connection = new signalR.HubConnectionBuilder()
-            .withUrl("/paymentHub")
-            .build();
-
-        connection.on("PaymentStatusChanged", function (orderId, isPaid) {
-            if (isPaid) {
-                // 如果收到的付款狀態為已付款，則跳出提醒視窗
-                Swal.fire(
-                    '交易狀態提示',
-                    '訂單編號： ' + orderId + '付款成功',
-                    'success'
-                )
-            }
-        });
-
-        connection.start().catch(function (err) {
-            return console.error(err.toString());
-        });
-    </script>
-    <script>
         let app = new Vue({
             el: '#app',
             data: {
@@ -262,7 +243,7 @@
                 },
                 //結帳
                 check: function (orderId){
-                    this.signalr.invoke("TrackPaymentStatus",orderId)
+                    this.signalr.invoke("TrackPaymentStatus", orderId.toString())
                     axios.put(`/api/OrderBackend/EditPayStatus/${orderId}`).then(response => {
                         this.getOrder();
                     })
@@ -352,7 +333,6 @@
                                 });
                             });
                 }
-
             },
             mounted: function () {
                 let _this = this;
@@ -360,6 +340,16 @@
                 _this.signalr = new signalR.HubConnectionBuilder().withUrl("/PaymentHub").build();
                 _this.signalr.start()
                     .then(() => {
+                        _this.signalr.on("PaymentStatusChanged", function (orderId, isPaid) {
+                            if (isPaid) {
+                                // 如果收到的付款狀態為已付款，則跳出提醒視窗
+                                Swal.fire(
+                                    '交易狀態提示',
+                                    '訂單編號： ' + orderId + '付款成功',
+                                    'success'
+                                )
+                            }
+                        });
                         console.log("connection");
                     })
                     .catch((err) => {
