--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
@@ -36,6 +36,12 @@
 			padding: 0.25rem !important;
 			margin: -10px;
 		}
+		div .table{
+			color: #ffffff;
+		}
+		div #datepicker{
+			color:#000000;
+		}
 	</style>
 	<!--預設檔案-->
 	@await RenderSectionAsync("Styles", required: false)
