--- a/EnjoyEat/EnjoyEat/wwwroot/backend/css/WordStyle.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/backend/css/WordStyle.css
@@ -1,4 +1,4 @@
-﻿body, table, .form-select, .form-control, .sidebar .navbar .navbar-nav .nav-link, .table-striped > tbody > tr:nth-of-type(odd) {
+﻿body, .form-select, .form-control, .sidebar .navbar .navbar-nav .nav-link, .table-striped > tbody > tr:nth-of-type(odd) {
     color: #ffffff !important;
 }
 
