修會員登入樣式

--- a/EnjoyEat/EnjoyEat/Views/MemberLogin/ForgetPassword.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/MemberLogin/ForgetPassword.cshtml
@@ -91,7 +91,7 @@
                                 iconColor: '#D8CDB9',
                                 background: '#FFF',
                                 title: '已發送至您的信箱',
-                                html: '<div class="custom-swal-container"><div class="custom-swal-message">將跳轉至登入頁面!</div></div>',
+                                html: '<div class="custom-swal-container"><div class="custom-swal-message">將跳轉至登入頁面!請至信箱收取信件</div></div>',
                                 showConfirmButton: false,
                                 timer: 2000,
                                 position: 'center'
