--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/ReservationManagement/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/ReservationManagement/Index.cshtml
@@ -15,6 +15,10 @@
         border-radius: 5px;
         transition: border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
     }
+    textarea.form-myself{
+            min-height: calc(1.5em + 0.75rem + 2px);
+    }
+    
         #btngroup {
             display: flex;
             white-space: nowrap;
